# Fluxel

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  PROJECT_OVERVIEW.md  README.md  SECURITY.md  design_system.md  index.html  package.json  vite.config.ts  vitest.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: build-beta.yml
docs/: CODING_STANDARDS.md  PROFILING_TESTS.md  design_system.md
scripts/: check-no-use-effect.mjs
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/node_resolver/: Cargo.toml  README.md
src-tauri/crates/node_resolver/src/: lib.rs
src-tauri/crates/node_resolver/tests/: resolver_tests.rs
src-tauri/icons/: icon.icns
src-tauri/src/: csproj_parser.rs  git_manager.rs  lib.rs  lsp_manager.rs  main.rs  node_services.rs
src-tauri/src/commands/: build.rs  launch.rs  minimax.rs  mod.rs  terminal.rs  workspace.rs
src-tauri/src/languages/: csharp.rs  lsp_manager.rs  mod.rs
src-tauri/src/languages/csharp/: lsp.rs  mod.rs  parser.rs
src-tauri/src/profiling/: README.md  attribution.rs  buffer.rs  commands.rs  mod.rs  sessions.rs  subscriber.rs
src-tauri/src/services/: batch_file_reader.rs  git.rs  mod.rs  node_resolver.rs  plugin_loader.rs  process_manager.rs  project_detector.rs
src/components/: ProfilerPanel.tsx
src/components/agent/: AgentPanel.tsx  ChatMessage.tsx  InputArea.tsx  MessageList.tsx  ModelSelector.tsx  ToolCallDisplay.tsx  index.ts
src/components/auth/: AuthAuroraBackdrop.tsx  AuthPage.tsx  AuthShader.tsx
src/components/editor/: CodeEditor.config-logic.test.ts  CodeEditor.tsx  EditorGroup.tsx  EditorPage.tsx  LanguageController.logic.test.ts  LanguageController.tsx  TabBar.tsx  VisualEditor.tsx
src/components/inspector/: ComponentTree.tsx  InspectorPanel.tsx  index.ts
src/components/landing/: LandingPage.tsx
src/components/ui/: EditorTitleBar.tsx  EditorTitleBar.visibility.test.ts  TitleBarShell.tsx  (+7 more)
src/hooks/: useCommands.ts  useGlobalShortcuts.ts  useKeyboardShortcuts.ts  useMountEffect.ts  usePlugins.ts  useProfiler.tsx  useReactiveEffect.ts
src/lib/: buildManager.ts  csharpBuild.ts  csharpConfig.ts  csharpMonacoIntegration.ts  gitignore.ts  lspClient.ts  monacoLanguageService.ts  monacoProjectSourceManager.ts  monacoTypeLoader.ts  monacoVfs.ts
src/plugins/: index.ts
src/stores/: index.ts  useEditorStore.ts  useFileSystemStore.ts  useProjectStore.ts  useSettingsStore.ts
src/styles/: index.css
src/types/: config.ts  fs.test.ts  fs.ts  icons.d.ts  profiling.ts  project.ts
(+189 files in other folders)
