[workspace]
members = ["crates/node_resolver"]

[package]
name = "fluxel"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "fluxel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
profiling = ["dep:tracing", "dep:tracing-subscriber"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Profiling (optional, feature-gated)
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ignore = "0.4"
walkdir = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
dirs = "6.0.0"
fluxel_node_resolver = { path = "crates/node_resolver" }
camino = "1.2.1"
git2 = "0.19"
regex = "1"
rayon = "1.10"

