[package]
name = "fluxel_node_resolver"
version = "0.1.0"
edition = "2021"
description = "Node-style module resolver and module analyzer for Fluxel"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1"
camino = "1"
napi = { version = "3", default-features = false, features = ["serde-json", "napi6"] }
napi-derive = "3"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
walkdir = "2"
swc_core = { version = "50", features = ["ecma_parser", "ecma_visit", "ecma_ast", "common_sourcemap", "base"] }

[dev-dependencies]
tempfile = "3"
