[package]
name = "fluxel_node_resolver"
version = "0.1.0"
edition = "2021"
description = "Node-style module resolver and module analyzer for Fluxel"
license = "MIT"

[lib]
crate-type = ["rlib"]

[dependencies]
anyhow = "1"
camino = "1"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
walkdir = "2"
swc_core = { version = "53", features = ["ecma_parser", "ecma_visit", "ecma_ast", "common_sourcemap", "base"] }

[dev-dependencies]
tempfile = "3"
